modified css to fix layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,60 +1,45 @@
-.App {
-  text-align: center;
+html, body { 
+  margin:0; 
+  padding:0; 
+  overflow:hidden;
+  width:100%; 
+  height:100%;
+  font-family: sans-serif;
 }
 
-.title {
-  vertical-align: middle;
+#root {
+  width:100%; 
+  height:100%;
+}
+
+.svg {
+  transform-origin: 100% 100%
+}
+
+.App {
+  text-align: center;
+  width:100%; 
+  height:100%;
+}
+
+.Nav {
+  width:100%; 
+  height:100%;
 }
 
 .App-header {
+  width:100%; 
+  height:100%;
   background-color: #222;
-  position: absolute;
-  height: 10%;
   width: 100%;
   color: white;
 }
 
-.leftArrow {
-  position: absolute;
-  top: 48%;
-  left: 30%;
-}
-.rightArrow {
-  position: absolute;
-  top: 48%;
-  left: 70%;
-}
-.upArrow {
-  position: absolute;
-  top: 20%;
-  left: 48%;
-}
-.downArrow {
-  position: absolute;
-  top: 80%;
-  left: 48%;
+.title {
+  padding-top: 1.5%;
+  vertical-align: text-bottom;
 }
 
 .App-intro {
   font-size: large;
-}
-
-.arrow {
-  height: 2%;
-  width: 2%;
-}
-
-.svg-container {
-    display: inline-block;
-    position: relative;
-    width: 100%;
-    padding-bottom: 100%; /* aspect ratio */
-    vertical-align: top;
-    overflow: hidden;
-}
-.svg-content-responsive {
-    display: inline-block;
-    position: absolute;
-    top: 10px;
-    left: 0;
 }
